// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NavigationLink component > snapshot test of Component story 1`] = `
<div>
  <a
    class="font-sans font-bold text-neutral-500 hover:text-primary-950"
    href="/abc"
  >
    Strona główna
  </a>
</div>
`;

exports[`NavigationLink component > snapshot test of Variants story 1`] = `
<div>
  <div
    class="flex gap-4"
  >
    <a
      aria-current="page"
      class="font-sans font-bold hover:text-primary-950 text-neutral-950"
      href="/"
    >
      Strona główna
    </a>
    <a
      class="font-sans font-bold text-neutral-500 hover:text-primary-950"
      href="/abc"
    >
      Strona główna
    </a>
  </div>
</div>
`;
